# Gene-Variant-Analysis

./: .dvcignore  .gitignore  Makefile  QUICK_START.md  README.md  USAGE_GUIDE.md  demo_pipeline.py  dvc.yaml  evaluate_simple.py  params.yaml  predict_simple.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_pipeline.py  test_simple.py  test_working.py
.github/workflows/: cd.yml  ci.yml
config/: __init__.py  config.yaml  logging_config.py
docker/: Dockerfile  docker-compose.yml
docs/: COMPLETE_USAGE_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md
results/: predictions.csv  sample_data.csv
scripts/: evaluate.py  evaluate_real.py  evaluate_simple.py  predict.py  train.py  train_multi_vcf.py  train_real_labels.py  train_small.py
src/: __init__.py
src/data/: __init__.py  data_loader.py  preprocessor.py  validator.py
src/features/: __init__.py  annotation_features.py  sequence_features.py  variant_features.py
src/models/: __init__.py  ensemble_model.py  variant_classifier.py
src/pipeline/: __init__.py  evaluation_pipeline.py  inference_pipeline.py  training_pipeline.py
src/utils/: __init__.py  annotation_utils.py  metrics.py  vcf_parser.py
src/visualization/: __init__.py  plots.py
tests/: test_data_loader.py  test_models.py  test_pipeline.py
